--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -22,6 +22,7 @@
   <script src="spec/views/ListsViewSpec.js"></script>
   <script src="spec/views/ListViewSpec.js"></script>
   <script src="spec/views/SimpleCardViewSpec.js"></script>
+  <script src="spec/views/CardViewSpec.js"></script>
   <script src="spec/models/ListSpec.js"></script>
   <script src="spec/models/CardSpec.js"></script>
 </head>
