--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -23,6 +23,7 @@
   <script src="spec/views/ListViewSpec.js"></script>
   <script src="spec/views/SimpleCardViewSpec.js"></script>
   <script src="spec/views/CardViewSpec.js"></script>
+  <script src="spec/views/SearchViewSpec.js"></script>
   <script src="spec/models/ListSpec.js"></script>
   <script src="spec/models/CardSpec.js"></script>
 </head>
