--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -19,6 +19,7 @@
   <!-- include spec files here... -->
   <script src="spec/SpecHelper.js"></script>
 
+  <script src="spec/AppSpec.js"></script>
   <script src="spec/views/ListsViewSpec.js"></script>
   <script src="spec/views/ListViewSpec.js"></script>
   <script src="spec/views/SimpleCardViewSpec.js"></script>
