--- a/jasmine/spec/javascripts/fixtures/body.html
+++ b/jasmine/spec/javascripts/fixtures/body.html
@@ -1,6 +1,8 @@
 <body>
   <header>
-    <input id="search">
+    <div class="searchWrapper">
+      <input class="searchInput">
+    </div>
     <ul></ul>
   </header>
   <main></main>
