--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -27,6 +27,7 @@
   <script src="spec/views/SearchViewSpec.js"></script>
   <script src="spec/models/ListSpec.js"></script>
   <script src="spec/models/CardSpec.js"></script>
+  <script src="spec/RouterSpec.js"></script>
 </head>
 
 <body>
