--- a/jasmine/SpecRunner.html
+++ b/jasmine/SpecRunner.html
@@ -12,7 +12,7 @@
   <script src="lib/jasmine-2.5.2/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="../public/javascripts/app.full.js"></script>
+  <script src="../public/javascripts/app.min.js"></script>
 
   <script src="lib/jasmine-jquery.js"></script>
 
